--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -4,3 +4,10 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('~assets/fonts/Bold/Roboto-Bold.woff2') format('woff2'), url('~assets/fonts/Bold/Roboto-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
