[FM] Avance en el detalle de Producto
Cambios:
* Ajuste en las fuentes con el soporte de Angular Material.
* Acomodación del header y footer desde el AppComponent.
* Implementación de detalle de producto sin carousel.
* Ajuste en la experiencia responsive en el sidebar del home.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
+<!-- NavBar -->
+<app-header></app-header>
+<!-- End NavBar -->
+
 <router-outlet></router-outlet>
+
+<!-- Footer-->
+<app-footer></app-footer>
+<!-- End Footer -->
