--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,3 @@
-<!-- NavBar -->
-<app-header></app-header>
-<!-- End NavBar -->
-
 <div class="main-content">
   <!-- Filter List Mobile -->
   <section class="md-filter" (click)="toggleFilterList()">
@@ -38,7 +34,7 @@
     <!-- Product List -->
     <section class="catalog-list">
       <ng-container *ngFor="let device of deviceList">
-        <a href="{{ device.productUrl }}">
+        <a [routerLink]="device.productUrl">
           <div class="devices">
             <div class="device-title">
               <div class="info">
@@ -67,7 +63,7 @@
               >
               <span>Plan Max Ilimitado {{ device.plan }}</span>
             </div>
-            <div class="tag-soloonline" *ngIf="device.onlyOnline">
+            <div class="tag-online" *ngIf="device.onlyOnline">
               <img src="https://static.claro.com.pe/img/otros/EtiquetaSoloOnline.png" width="72" />
             </div>
           </div>
@@ -78,7 +74,3 @@
   </main>
   <!-- End Main -->
 </div>
-
-<!-- Footer-->
-<app-footer></app-footer>
-<!-- End Footer -->
