--- a/src/app/pages/product/product.component.scss
+++ b/src/app/pages/product/product.component.scss
@@ -137,6 +137,58 @@
 
 /* ---------- Product Carousel ---------- */
 
+.product-carousel {
+  width: 100%;
+  display: flex;
+  margin: 40px 0px 50px 0px;
+  height: 250px;
+  justify-content: center;
+
+  @media only screen and (min-width: 1280px) {
+    width: 52%;
+    margin-left: 100px;
+    margin-top: 52px;
+    float: left;
+    height: 430px;
+  }
+
+  .product-carousel-content {
+    width: 80%;
+    height: 250px;
+    position: relative;
+
+    @media only screen and (min-width: 1280px) {
+      height: 425px;
+    }
+  }
+}
+
+::ng-deep .owl-carousel .owl-item {
+  width: 250px;
+  margin: auto;
+  height: 250px;
+
+  @media only screen and (min-width: 1280px) {
+    height: 440px;
+    margin: auto;
+    width: 440px;
+  }
+
+  img {
+    width: auto;
+    height: 100%;
+    margin: auto;
+  }
+
+  .slide {
+    height: 250px;
+
+    @media only screen and (min-width: 1280px) {
+      height: 440px;
+    }
+  }
+}
+
 /* ---------- End Product Carousel ---------- */
 
 /* ---------- Product Info ---------- */
@@ -296,7 +348,7 @@
             font-weight: 900;
             border: none;
             font-size: 16px;
-            top: 12px;
+            top: 14px;
             left: 12px;
           }
 
