--- a/src/styles.scss
+++ b/src/styles.scss
@@ -123,7 +123,12 @@ video {
   color: #222222;
 }
 
+html,
 body {
+  height: 100%;
+}
+body {
+  margin: 0;
   font-family: $primary_font !important;
   background-color: #fafafa !important;
 }
@@ -175,7 +180,7 @@ i {
 
 .tag-new {
   position: absolute;
-  top: 0px;
+  top: 0;
   left: 0;
   width: 60px;
   z-index: 2;
@@ -183,13 +188,4 @@ i {
   img {
     width: 60px;
   }
-}
-
-html,
-body {
-  height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
