--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -43,7 +43,7 @@
     padding: 20px 0 20px 6px;
 
     @media only screen and (min-width: 1280px) {
-      margin: 20px 0 0 30px;
+      margin: 20px 0 -45px 30px;
       border-radius: 5px;
       background: #f4f4f4;
     }
@@ -105,7 +105,7 @@
         font-weight: 900;
         border: none;
         font-size: 16px;
-        top: 12px;
+        top: 14px;
         left: 12px;
       }
 
